# starcat-swap

./: .gitmodules  README.md
contracts/lib/starknet/interfaces/: Identity.sol  ProxySupport.sol
contracts/lib/starknet/libraries/: Common.sol  NamedStorage.sol
contracts/lib/starknet/tokens/ERC1155/: IERC1155Receiver.sol
contracts/lib/starknet/upgrade/: StorageSlots.sol
contracts/src/: StarcatEthBridge.sol
docs/: flow.md
src/: pyproject.toml
src/bitcoin/: README.md
src/ethereum/: README.md  foundry.toml
src/ethereum/lib/starknet/interfaces/: MGovernance.sol
src/ethereum/lib/starknet/libraries/: Constants.sol
src/ethereum/lib/starknet/tokens/ERC1155/: IERC1155.sol
src/ethereum/lib/starknet/upgrade/: ProxyStorage.sol
src/ethereum/script/: DeployStarcatSwapBridge.s.sol  ERC20.s.sol  StarcatSwapBridge.s.sol  TestStarcatSwapBridge.s.sol  deploy.txt
src/ethereum/src/: StarcatEthBridge.sol  StarcatSwapBridge.sol  TestERC20.sol
src/ethereum/test/: StarcatSwapBridge.t.sol
src/frontend/: README.md
src/sequencer/: README.md  main.py
src/starknet/: README.md  adresses.txt
src/starknet/starcatpool/: Scarb.toml
src/starknet/starcatpool/src/: lib.cairo  starcatpool.cairo
starknet/components/: FactRegistry.sol  Governance.sol  GovernanceStorage.sol
starknet/interfaces/: BlockDirectCall.sol  ContractInitializer.sol  ExternalInitializer.sol  IFactRegistry.sol  IQueryableFactRegistry.sol
starknet/tokens/ERC20/: IERC20.sol
starknet/tokens/ERC721/: IERC721Receiver.sol
starknet/upgrade/: CallProxy.sol  Proxy.sol  ProxyGovernance.sol
(+1 files in other folders)
